--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,15 +23,11 @@
       </a></h1>
       <nav>
         <ul>
-          <li><a href="#About">Parotとは？</a></li>
           <li><a href="#Tool">機能紹介</a></li>
           <li><a href="#Scene">活用シーン</a></li>
-          <li><a href="#Case">導入事例</a></li>
-          <li><a href="#Plan">料金プラン</a></li>
+          <li><a href="#Flow">ご利用方法</a></li>
         </ul>
       </nav>
-      <p class="badge"><a href="contact/entry.html"><span><strong>お申し込みは<br>こちら</strong></span></a></p>
-      <p class="btn"><a href="contact/entry.html">お申し込み</a></p>
       <!-- #Header // --></header>
 
     <!--
@@ -46,7 +42,7 @@
           <video playsinline muted loop autoplay></video>
         </div>
         <p class="copy">だれでも<span>・</span><br>いますぐ<span>・</span><br>かんたん</p>
-        <p class="tag"><span><i>LINE</i>公式アカウントの</span><br>チャットボット作成サービス</p>
+        <p class="tag"><span><i></i>チャットボットにより</span><br>適正職業診断サービス</p>
       </div><!-- #FirstView // -->
 
       <main id="Main">
@@ -64,35 +60,12 @@
                 </div>
               </div>
             </div>
-            <h2>チャットボットで<br>悩みを解決！</h2>
-            <div class="chat">
-              <dl>
-                <dt>受け答えを自動化したい。</dt>
-                <dd>オンラインストアや自社サービスの接客対応を24時間自動対応します。</dd>
-              </dl>
-              <dl>
-                <dt>顧客に最適な商品を提案したい。</dt>
-                <dd>顧客に最適化された商品を提案し、迷わせることなくコンバージョンへ導きます。</dd>
-              </dl>
-              <dl>
-                <dt>診断コンテンツを作りたい。</dt>
-                <dd>チャットボット形式で利用ユーザーの悩みを診断し、最適な商品やサービスを提案します。</dd>
-              </dl>
-              <dl>
-                <dt>FAQを自動化したい。</dt>
-                <dd>顧客からのよくあるご質問をチャットボットで自動回答。</dd>
-              </dl>
-            </div><!-- .chat // -->
+            <h2>チャットボットで<br>あなたに合った職業をご案内！</h2>
           </div><!-- .section_inline // -->
         </section><!-- #Solution // -->
 
         <section id="About">
           <div class="section_inline">
-            <p class="logo">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 407.3 124.7">
-                <use xlink:href="assets/images/lp/logo.svg#LogoParot"/>
-              </svg>
-            </p>
             <div class="box-list">
               <div class="box">
                 <h3>だれでも</h3>
@@ -106,14 +79,7 @@
                 <h3>かんたん</h3>
                 <p>直感的に使える<br>わかりやすい管理画面</p>
                 <!-- .box // --></div>
-            </div>
-
-            <div class="c-welcome">
-              <p class="c-welcome-lead"><span>あなたもチャットボットを<br>作ってみませんか？</span>初期費・月額費が無料ではじめられます！</p>
-              <p class="c-welcome-btn"><a href="contact/entry.html"><span>お申し込みはこちら<i></i></span></a></p>
-              <p class="c-welcome-download">
-                <a href="contact/inquiry9690.html?contact_type=%e8%b3%87%e6%96%99%e8%ab%8b%e6%b1%82%e3%81%ab%e9%96%a2%e3%81%99%e3%82%8b%e3%81%8a%e5%95%8f%e3%81%84%e5%90%88%e3%82%8f%e3%81%9b">資料請求はこちら<span></span></a>
-              </p></div>    <!-- .section_inline // --></div><!-- #About // --></section>
+            </div><!-- .section_inline // --></div><!-- #About // --></section>
 
         <section id="Tool">
           <div class="section_inline">
@@ -181,282 +147,18 @@
 
             <!-- .section_inline // --></div><!-- #Tool // --></section>
 
-        <section id="Scene" class="scene">
-          <div class="section_inline">
-            <h2 class="scene-title">活用シーン</h2>
-
-            <div class="scene-box">
-              <div class="scene-phone">
-                <div class="c-phone">
-                  <div class="c-phone-body">
-                    <div class="c-phone-item"><img src="assets/images/lp/scene/01_thumb.jpg"/></div>
-                    <div class="c-phone-item"><img src="assets/images/lp/scene/02_thumb.jpg"/></div>
-                    <div class="c-phone-item"><img src="assets/images/lp/scene/03_thumb.jpg"/></div>
-                    <div class="c-phone-item"><img src="assets/images/lp/scene/04_thumb.jpg"/></div>
-                  </div>
-                </div>
-              </div>
-              <div class="scene-wrap">
-                <ul class="scene-list">
-                  <li class="scene-item">
-                    <figure>
-                      <img src="assets/images/lp/scene/01_icon.png" alt=""/>
-                      <figcaption>オンライン接客</figcaption>
-                    </figure>
-                    <p>オンラインストアや自社サービスの接客対応を24時間自動対応します。</p>
-                  </li>
-                  <li class="scene-item">
-                    <figure>
-                      <img src="assets/images/lp/scene/02_icon.png" alt=""/>
-                      <figcaption>商品検索・提案</figcaption>
-                    </figure>
-                    <p>顧客に最適化された商品を提案し、迷わせることなくコンバージョンへ導きます。</p>
-                  </li>
-                  <li class="scene-item">
-                    <figure>
-                      <img src="assets/images/lp/scene/03_icon.png" alt=""/>
-                      <figcaption>診断コンテンツ</figcaption>
-                    </figure>
-                    <p>チャットボット形式で利用ユーザーの悩みを診断し、最適な商品やサービスを提案します。</p>
-                  </li>
-                  <li class="scene-item">
-                    <figure>
-                      <img src="assets/images/lp/scene/04_icon.png" alt=""/>
-                      <figcaption>FAQ</figcaption>
-                    </figure>
-                    <p>顧客からのよくあるご質問をチャットボットで自動回答。</p>
-                  </li>
-                </ul>
-                <div class="c-slider-pagination"></div>
-              </div>
-            </div>
-
-            <p class="lead">Parot LINE公式アカウントを<br class="sp">友だち登録すると<br>チャットボットをご体験いただけます。</p>
-            <p class="btn"><a href="https://line.me/R/ti/p/%40eys1114l" target="_blank"><span><strong><svg
-                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 407.3 124.7"><use
-                    xlink:href="assets/images/lp/logo.svg#LogoParot"/></svg></strong>友だち追加<i></i></span></a></p>
-            <p class="c-welcome-download mod-invert">
-              <a href="contact/inquiry9690.html?contact_type=%e8%b3%87%e6%96%99%e8%ab%8b%e6%b1%82%e3%81%ab%e9%96%a2%e3%81%99%e3%82%8b%e3%81%8a%e5%95%8f%e3%81%84%e5%90%88%e3%82%8f%e3%81%9b">資料請求はこちら<span></span></a>
-            </p></div>
-        </section>
-
-        <section id="Case">
-          <h2>導入事例</h2>
-          <div class="section_inline">
-            <div class="box touchEvent"><a href="https://line.me/R/ti/p/%40987givib" target="_blank">
-              <figure><img src="assets/images/lp/case_img08.jpg"></figure>
-              <h3>MIZUNO<br>T&F / RUNNING</h3>
-              <p class="category">商品紹介コンテンツ</p>
-              <p class="btn"><i></i>友だち追加</p>
-            </a><!-- .box // --></div>
-
-            <div class="box touchEvent"><a href="https://line.me/R/ti/p/%40xqg6017m" target="_blank">
-              <figure><img src="assets/images/lp/case_img01.gif"></figure>
-              <h3>MARYQUANT</h3>
-              <p class="category">商品診断コンテンツ</p>
-              <p class="btn"><i></i>友だち追加</p>
-            </a><!-- .box // --></div>
-
-            <div class="box touchEvent"><a href="https://line.me/R/ti/p/%40ebx9761j" target="_blank">
-              <figure><img src="assets/images/lp/case_img05.gif"></figure>
-              <h3>FELISSIMO<br>flufeel</h3>
-              <p class="category">アンケートコンテンツ</p>
-              <p class="btn"><i></i>友だち追加</p>
-            </a><!-- .box // --></div>
-
-            <div class="box touchEvent"><a href="https://line.me/R/ti/p/%40hagoromouniv" target="_blank">
-              <figure><img src="assets/images/lp/case_img09.jpg"></figure>
-              <h3>羽衣国際大学</h3>
-              <p class="category">学部診断コンテンツ</p>
-              <p class="btn"><i></i>友だち追加</p>
-            </a><!-- .box // --></div>
-            <!-- .section_inline // --></div>
-
-          <div class="c-slider-pagination"></div>
-
-          <div class="c-welcome">
-            <p class="c-welcome-lead"><span>あなたもチャットボットを<br>作ってみませんか？</span>初期費・月額費が無料ではじめられます！</p>
-            <p class="c-welcome-btn"><a href="contact/entry.html"><span>お申し込みはこちら<i></i></span></a></p>
-            <p class="c-welcome-download">
-              <a href="contact/inquiry9690.html?contact_type=%e8%b3%87%e6%96%99%e8%ab%8b%e6%b1%82%e3%81%ab%e9%96%a2%e3%81%99%e3%82%8b%e3%81%8a%e5%95%8f%e3%81%84%e5%90%88%e3%82%8f%e3%81%9b">資料請求はこちら<span></span></a>
-            </p></div>    <!-- #Case // --></section>
-
         <section id="Flow">
           <h2>ご利用の流れ</h2>
 
           <div class="section_inline">
-            <div class="step-list">
               <section class="step-item">
-                <p class="step-num"><span>1</span></p>
-                <h3 class="step-title">お申し込み</h3>
-                <p class="step-text">お客さまの情報をご入力の上、<br>お申し込みください。</p>
+                <p class="step-text">右のQRコードを読み込むと<br>チャットボットが利用できます。</p>
               </section>
-              <section class="step-item">
-                <p class="step-num"><span>2</span></p>
-                <h3 class="step-title">LINEアカウントの情報入力</h3>
-                <p class="step-text">返信されたメールのURLから<br>LINEとParotと連携してください。</p>
-              </section>
-              <section class="step-item">
-                <p class="step-num"><span>3</span></p>
-                <h3 class="step-title">管理画面にログイン</h3>
-                <p class="step-text">設定したパスワードでログインし、<br>チャットボットを作成してください。</p>
-              </section>
-            </div>
+            <div id="qr">
+                <img src="../../assets/qr/LINE@NECTUS.png">
+              </div>
           </div>
         </section>
-
-        <section id="Plan">
-          <div class="section_inline">
-            <h2>料金プラン</h2>
-
-            <ul class="price_feature_list">
-              <li class="price_feature_item">初期費<span>無料</span></li>
-              <li class="price_feature_item">どのプランでも<br><span>「全機能」</span>お使いいただけます</li>
-            </ul>
-
-            <div class="price_list">
-              <div class="box box-header">
-                <h3></h3>
-                <p><span>こんな方に<br>おすすめ</span></p>
-                <p><span>月額費<sup>※1</sup></span></p>
-                <p><span>チャットボット<br>応答数<sup>※2</sup></span></p>
-                <p><span>サポート</span></p>
-                <p><span>初期費</span><span class="copy">どのプランでも「無料」</span></p>
-                <p><span>機能</span><span class="copy">どのプランでも「全機能」お使いいただけます</span></p>
-              </div>
-              <div class="box">
-                <h3>
-                  フリー
-                </h3>
-                <p class="text">
-                  <span class="label">こんな方におすすめ</span>
-                  <span class="value">まずはお試しで<br class="pc">体験してみたい方</span>
-                </p>
-                <p class="price">
-                  <span class="label">月額費<sup>※1</sup></span>
-                  <span class="value">無料</span>
-                </p>
-                <p class="rate">
-                  <span class="label">チャットボット<br class="pc">応答数<sup>※2</sup></span>
-                  <span class="value">1,000/月まで</span>
-                </p>
-                <p class="support">
-                  <span class="label">サポート</span>
-                  <span class="value">-</span>
-                </p>
-                <p class="initial"></p>
-                <p class="feature"></p>
-                <!-- .box // --></div>
-              <div class="box">
-                <h3>
-                  ライト
-                </h3>
-                <p class="text">
-                  <span class="label">こんな方におすすめ</span>
-                  <span class="value">チャットボットを<br>ご利用になりたい方</span>
-                </p>
-                <p class="price">
-                  <span class="label">月額費<sup>※1</sup></span>
-                  <span class="value">¥10,000/月</span>
-                </p>
-                <p class="rate">
-                  <span class="label">チャットボット<br class="pc">応答数<sup>※2</sup></span>
-                  <span class="value">10,000/月まで</span>
-                </p>
-                <p class="support is-active">
-                  <span class="label">サポート</span>
-                  <span class="value">○</span>
-                </p>
-                <p class="initial"></p>
-                <p class="feature"></p>
-                <!-- .box // --></div>
-              <div class="box is-recommended">
-                <h3>
-                  ベーシック
-                  <span class="recommend">おすすめ</span>
-                </h3>
-                <p class="text">
-                  <span class="label">こんな方におすすめ</span>
-                  <span class="value">機能を<br class="pc">フル活用されたい方</span>
-                </p>
-                <p class="price">
-                  <span class="label">月額費<sup>※1</sup></span>
-                  <span class="value">¥50,000/月</span>
-                </p>
-                <p class="rate">
-                  <span class="label">チャットボット<br class="pc">応答数<sup>※2</sup></span>
-                  <span class="value">50,000/月まで</span>
-                </p>
-                <p class="support is-active">
-                  <span class="label">サポート</span>
-                  <span class="value">○</span>
-                </p>
-                <p class="initial"></p>
-                <p class="feature"></p>
-                <!-- .box // --></div>
-              <div class="box">
-                <h3>
-                  プロ
-                </h3>
-                <p class="text">
-                  <span class="label">こんな方におすすめ</span>
-                  <span class="value">LINEアカウントを<br>更に成長させたい方</span>
-                </p>
-                <p class="price">
-                  <span class="label">月額費<sup>※1</sup></span>
-                  <span class="value">¥100,000/月</span>
-                </p>
-                <p class="rate">
-                  <span class="label">チャットボット<br class="pc">応答数<sup>※2</sup></span>
-                  <span class="value">100,000/月まで</span>
-                </p>
-                <p class="support is-active">
-                  <span class="label">サポート</span>
-                  <span class="value">○</span>
-                </p>
-                <p class="initial"></p>
-                <p class="feature"></p>
-                <!-- .box // --></div>
-              <div class="box">
-                <h3>
-                  エンター<br class="pc">プライズ
-                </h3>
-                <p class="text">
-                  <span class="label">こんな方におすすめ</span>
-                  <span class="value">友だち数の多い<br class="pc">企業さま</span>
-                </p>
-                <p class="price">
-                  <span class="label">月額費<sup>※1</sup></span>
-                  <span class="value">¥100,000〜/月<span>（従量課金１円/１応答）</span></span>
-                </p>
-                <p class="rate">
-                  <span class="label">チャットボット<br class="pc">応答数<sup>※2</sup></span>
-                  <span class="value">無制限</span>
-                </p>
-                <p class="support is-active">
-                  <span class="label">サポート</span>
-                  <span class="value">○</span>
-                </p>
-                <p class="initial"></p>
-                <p class="feature"></p>
-                <!-- .box // --></div>
-              <!-- .price_list // --></div>
-
-            <ul class="att">
-              <li>※1料金は1ボットあたりの金額で全て税別表記となります。</li>
-              <li>※2ユーザーのアクションに対してチャットボットが応答した数になります。（配信数とは別）</li>
-              <li>※カスタマイズや運用サポートも承っております。気軽にお問い合わせください。</li>
-              <!-- .att // --></ul>
-            <!-- .section_inline // --></div><!-- #Plan // --></section>
-
-        <div id="Contact">
-          <div class="c-welcome">
-            <p class="c-welcome-btn"><a href="contact/entry.html"><span>お申し込みはこちら<i></i></span></a></p>
-            <p class="c-welcome-download">
-              <a href="contact/inquiry9690.html?contact_type=%e8%b3%87%e6%96%99%e8%ab%8b%e6%b1%82%e3%81%ab%e9%96%a2%e3%81%99%e3%82%8b%e3%81%8a%e5%95%8f%e3%81%84%e5%90%88%e3%82%8f%e3%81%9b">資料請求はこちら<span></span></a>
-            </p></div>    <!-- #Contact // --></div>
-
-        <p id="Fixed"><a href="contact/entry.html">お申し込みはこちら</a></p>
 
         <!-- #Main // --></main>
 
@@ -467,24 +169,6 @@
     Footer
     //////////////////////////////////////////////////////////////////////////////
     -->
-    <footer id="Footer" role="contentinfo">
-      <ul class="navi">
-        <li><a href="terms/index.html">利用規約</a></li>
-        <li><a href="privacy/index.html">プライバシーポリシー</a></li>
-        <li><a href="law/index.html">特定商取引法に基づく表記</a></li>
-        <li><a href="https://mefilas.com/" target="_blank">運営会社</a></li>
-        <li><a href="contact/partner.html">パートナープログラム</a></li>
-        <li><a href="contact/inquiry.html">お問い合わせ</a></li>
-        <!-- .navi // --></ul>
-
-      <ul class="social">
-        <li><a href="https://www.facebook.com/parot.official/" target="_blank">facabook</a></li>
-        <li><a href="https://twitter.com/parot_official" target="_blank">twitter</a></li>
-        <li><a href="https://line.me/R/ti/p/%40eys1114l" target="_blank">line</a></li>
-        <li><a href="https://note.mu/parot" target="_blank">note</a></li>
-        <!-- .social // --></ul>
-      <!-- #Footer // --></footer>
-
   </div><!-- #Container // -->
 
   <script src="../cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
