--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1727,7 +1727,7 @@
 }
 
 #Flow .step-item:nth-child(odd) {
-    background-color: #eff9f8
+    background-color: #61c1ba
 }
 
 @media screen and (min-width: 769px) {
