[Update]LP下部のQRコードセクションの修正

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -150,13 +150,13 @@
         <section id="Flow">
           <h2>ご利用の流れ</h2>
 
-          <div class="section_inline">
-              <section class="step-item">
-                <p class="step-text">右のQRコードを読み込むと<br>チャットボットが利用できます。</p>
-              </section>
+          <div class="section_inline addBlock">
+            <section class="step-item">
+              <p class="step-text">右のQRコードを読み込むと<br>チャットボットが利用できます。</p>
+            </section>
             <div id="qr">
-                <img src="../../assets/qr/LINE@NECTUS.png">
-              </div>
+              <img src="../../assets/qr/LINE@NECTUS.png">
+            </div>
           </div>
         </section>
 
