機能紹介　変更

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -124,8 +124,8 @@
                 <video src="assets/movie/tool_scenario.mp4" playsinline muted loop autoplay></video>
               </div>
               <div class="info">
-                <h3><i></i>シナリオ</h3>
-                <p>選択形式でユーザーが求める情報を自動応答するチャットボットの基本機能</p>
+                <h3>退職代行</h3>
+                <p>退職に必要な手続きを代行します</p>
                 <!-- .info // --></div>
               <!-- .box // --></div>
 
@@ -134,8 +134,8 @@
                 <video src="assets/movie/tool_keyword.mp4" playsinline muted loop autoplay></video>
               </div>
               <div class="info">
-                <h3><i></i>キーワード</h3>
-                <p>ユーザーが入力したキーワードへの応答やシナリオを自動返信</p>
+                <h3>職業斡旋</h3>
+                <p>あなたに適した職業を探して紹介します</p>
                 <!-- .info // --></div>
               <!-- .box // --></div>
 
@@ -144,8 +144,8 @@
                 <video src="assets/movie/tool_talk.mp4" playsinline muted loop autoplay></video>
               </div>
               <div class="info">
-                <h3><i></i>トーク</h3>
-                <p>有人チャット対応やユーザーの利用履歴・パーソナルデータを確認</p>
+                <h3>スクール紹介</h3>
+                <p>次の仕事に向けてスキルアップのサポートをします</p>
                 <!-- .info // --></div>
               <!-- .box // --></div>
 
@@ -154,28 +154,8 @@
                 <video src="assets/movie/tool_report.mp4" playsinline muted loop autoplay></video>
               </div>
               <div class="info">
-                <h3><i></i>レポート</h3>
-                <p>チャットボットの利用状況や入力されたキーワード・アンケートで集めたデータを一覧で確認</p>
-                <!-- .info // --></div>
-              <!-- .box // --></div>
-
-            <div id="Question" class="box">
-              <div class="capture">
-                <video src="assets/movie/tool_question.mp4" playsinline muted loop autoplay></video>
-              </div>
-              <div class="info">
-                <h3><i></i>アンケート</h3>
-                <p>質問と選択肢を設定しユーザーのパーソナルデータを収集</p>
-                <!-- .info // --></div>
-              <!-- .box // --></div>
-
-            <div id="Push" class="box">
-              <div class="capture">
-                <video src="assets/movie/tool_push.mp4" playsinline muted loop autoplay></video>
-              </div>
-              <div class="info">
-                <h3><i></i>配信</h3>
-                <p>管理画面上から配信やアンケートで収集したパーソナルデータを元にセグメント配信も可能</p>
+                <h3>人材紹介</h3>
+                <p>退職した方に代わる人材を紹介します</p>
                 <!-- .info // --></div>
               <!-- .box // --></div>
 
