ソース変更(不動)

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,11 +16,6 @@
     //////////////////////////////////////////////////////////////////////////////
     -->
     <header id="Header" role="banner">
-      <h1><a href="index.html">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 407.3 124.7">
-          <use xlink:href="assets/images/lp/logo.svg#LogoParot"/>
-        </svg>
-      </a></h1>
       <nav>
         <ul>
           <li><a href="#Tool">機能紹介</a></li>
@@ -28,7 +23,7 @@
           <li><a href="#Flow">ご利用方法</a></li>
         </ul>
       </nav>
-      <!-- #Header // --></header>
+    </header>
 
     <!--
     //////////////////////////////////////////////////////////////////////////////
@@ -38,11 +33,9 @@
     <div id="Content">
 
       <div id="FirstView">
-        <div id="Video">
-          <video playsinline muted loop autoplay></video>
-        </div>
+        <h3 id="app_name"><i></i>ネクタス</h3>
         <p class="copy">だれでも<span>・</span><br>いますぐ<span>・</span><br>かんたん</p>
-        <p class="tag"><span><i></i>チャットボットにより</span><br>適正職業診断サービス</p>
+        <p class="tag"><span><i></i>チャットボットにより</span><br>適正職業を診断！</p>
       </div><!-- #FirstView // -->
 
       <main id="Main">
@@ -52,13 +45,10 @@
               <div class="c-phone">
                 <div class="c-phone-body">
                   <ul>
-                    <li class="c-phone-item"><img src="assets/images/lp/scene/01_thumb.jpg"></li>
-                    <li class="c-phone-item"><img src="assets/images/lp/scene/02_thumb.jpg"></li>
-                    <li class="c-phone-item"><img src="assets/images/lp/scene/03_thumb.jpg"></li>
-                    <li class="c-phone-item"><img src="assets/images/lp/scene/04_thumb.jpg"></li>
+                    <li class="c-phone-item"><img src="../../assets/chatting/check1.jpg"></li>
                   </ul>
                 </div>
-              </div>
+              </div> 
             </div>
             <h2>チャットボットで<br>あなたに合った職業をご案内！</h2>
           </div><!-- .section_inline // -->
@@ -69,15 +59,15 @@
             <div class="box-list">
               <div class="box">
                 <h3>だれでも</h3>
-                <p>専門的な知識がなくても<br>管理画面からすべて設定可能</p>
+                <p>業界に限りなく<br>どなたでも気軽に相談できます</p>
                 <!-- .box // --></div>
               <div class="box">
                 <h3>いますぐ</h3>
-                <p>月額無料から始められる<br>5つのプラン</p>
+                <p>登録不要！<br>すぐにご利用いただけます</p>
                 <!-- .box // --></div>
               <div class="box">
                 <h3>かんたん</h3>
-                <p>直感的に使える<br>わかりやすい管理画面</p>
+                <a href="#Flow"><p>QRコードを読み取って相談開始</p></a>
                 <!-- .box // --></div>
             </div><!-- .section_inline // --></div><!-- #About // --></section>
 
