[Update]LPのスマホ画像の調整

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -185,10 +185,10 @@
 
 @media screen and (min-width: 769px) {
     #Solution .sample {
-        width: 414px;
+        width: 350px;
         position: absolute;
-        top: -242px;
-        right: 81px
+        top: -258px;
+        right: 63px;
     }
 }
 
