--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2036,7 +2036,8 @@ a, button {
 }
 
 .c-phone-item {
-    width: 100%;
+    width: 350px;
+    height: 750px;
     position: absolute;
     top: 0;
     left: 0
